--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,4 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = sparkfun/SparkFun Bio Sensor Hub Library@^1.1
+; build_flags = -DCORE_DEBUG_LEVEL=5
