--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps = sparkfun/SparkFun Bio Sensor Hub Library@^1.1
-; build_flags = -DCORE_DEBUG_LEVEL=5
+lib_deps = 
+	sparkfun/SparkFun Bio Sensor Hub Library@^1.1
+	agdl/Base64@^1.0.0
